# deep-audio-fingerprinting-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: datasets.py
evaluation/: offline.py  recording.py
generation/: generate_fingerprints.py  generate_index.py
loss/: metric_learning_losses.py
models/: attention.py  neural_fingerprinter.py
models/beats/: beatswrapper.py
models/beats/beats_modules/: BEATs.py
recordings/: recording_songs.csv
training/: loops.py  trainer.py
training/callbacks/: collate.py  early_stopping.py
utils/: metrics.py  torch_utils.py  utils.py  wavs_to_faiss_index.py
