[project]
name = "deep-audio-fingerprinting-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "audiomentations==0.37.0",
    "faiss-cpu==1.9.0.post1",
    "librosa==0.10.2.post1",
    "prettytable==3.12.0",
    "pytorch-metric-learning==2.8.1",
    "pyyaml==6.0.2",
    "tabulate==0.9.0",
    "toolz==1.0.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchlibrosa==0.1.0",
    "tqdm==4.67.1",
]
